<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.mainactivity.ConvertActivity">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_main_currency"
        android:layout_margin="@dimen/_20sdp"
        android:textSize="@dimen/_14ssp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainCurrency"
        app:layout_constraintStart_toStartOf="@id/mainCurrency"
        app:layout_constraintEnd_toEndOf="@id/mainCurrency"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_final_currency"
        android:layout_margin="@dimen/_20sdp"
        android:textSize="@dimen/_14ssp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/currencyToBeConverted"
            app:layout_constraintStart_toStartOf="@id/currencyToBeConverted"
        app:layout_constraintEnd_toEndOf="@id/currencyToBeConverted"
        android:gravity="center_horizontal" />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/mainCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_130sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/currencyToBeConverted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_130sdp"
        app:layout_constraintLeft_toRightOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/_10sdp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/valueToBeConverted"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/_300sdp"
        android:textSize="@dimen/_12ssp"
        android:hint="@string/insert_amount_to_be_converted"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/mainCurrency"
        app:layout_constraintStart_toStartOf="@id/mainCurrency"
        app:layout_constraintRight_toLeftOf="@id/guideline1"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConvert"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/convert"
        app:layout_constraintTop_toTopOf="@id/valueToBeConverted"
        app:layout_constraintStart_toEndOf="@id/valueToBeConverted"
        app:layout_constraintBottom_toBottomOf="@id/valueToBeConverted"
        />

    <TextView
        android:id="@+id/convertedValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:textSize="@dimen/_20ssp"
        android:text="@string/converted_value"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valueToBeConverted"
        android:gravity="center_horizontal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShowList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/see_currency_list"
        android:textAllCaps="false"
        android:textSize="@dimen/_15ssp"
        android:layout_margin="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convertedValue"/>


</androidx.constraintlayout.widget.ConstraintLayout>